# storage/api-docs/api-docs.json
@@ -26,12 +26,12 @@
                                     "user": {
                                         "type": "string",
                                         "format": "email",
-                                        "example": "user@example.com"
+                                        "example": "admin@tap.com"
                                     },
                                     "password": {
                                         "type": "string",
                                         "format": "password",
-                                        "example": "secret123"
+                                        "example": "password"
                                     }
                                 },
                                 "type": "object"
@@ -41,7 +41,24 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Token generado con éxito"
+                        "description": "Token generado con éxito",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "token": {
+                                            "type": "string",
+                                            "example": "1|laravel_sanctum_token_here"
+                                        },
+                                        "token_type": {
+                                            "type": "string",
+                                            "example": "Bearer"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "Credenciales inválidas"
@@ -58,7 +75,12 @@
                 "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
                 "responses": {
                     "200": {
-                        "description": "Sesión cerrada"
+                        "description": "Sesión cerrada",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 },
                 "security": [
@@ -77,7 +99,12 @@
                 "operationId": "1bfaa78d1c2c3848ab8165c5dadcad3e",
                 "responses": {
                     "200": {
-                        "description": "Respuesta con productos"
+                        "description": "Respuesta con productos",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
@@ -127,8 +154,13 @@
                     }
                 },
                 "responses": {
-                    "201": {
-                        "description": "Producto almacenado exitosamente"
+                    "200": {
+                        "description": "Producto almacenado exitosamente",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
@@ -163,7 +195,12 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Producto encontrado"
+                        "description": "Producto encontrado",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
@@ -229,7 +266,12 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Usuario actualizado"
+                        "description": "Usuario actualizado",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
@@ -280,6 +322,36 @@
                 ]
             }
         },
+        "/api/products/export": {
+            "get": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Exportar todos los productos",
+                "operationId": "7b9b9c6510497057c88db820f281b66d",
+                "responses": {
+                    "200": {
+                        "description": "Respuesta con productos en un xlsx",
+                        "content": {
+                            "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet": {
+                                "schema": {
+                                    "type": "string",
+                                    "format": "binary"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "No autorizado"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/profiles": {
             "get": {
                 "tags": [
@@ -289,7 +361,12 @@
                 "operationId": "43d12304c3e621ecce8cc9ccd4b3738e",
                 "responses": {
                     "200": {
-                        "description": "Respuesta con pefiles"
+                        "description": "Respuesta con pefiles",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
@@ -319,15 +396,18 @@
                                 "properties": {
                                     "name": {
                                         "type": "string",
-                                        "format": "email",
-                                        "example": "user@example.com"
+                                        "example": "Administrador"
                                     },
                                     "sections": {
                                         "type": "array",
                                         "items": {
                                             "type": "string"
                                         },
-                                        "example": "[]"
+                                        "example": [
+                                            "Users",
+                                            "Products",
+                                            "Profiles"
+                                        ]
                                     }
                                 },
                                 "type": "object"
@@ -336,8 +416,13 @@
                     }
                 },
                 "responses": {
-                    "201": {
-                        "description": "Perfil almacenado exitosamente"
+                    "200": {
+                        "description": "Perfil almacenado exitosamente",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
@@ -372,7 +457,12 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Perfil encontrado"
+                        "description": "Perfil encontrado",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
@@ -417,15 +507,18 @@
                                 "properties": {
                                     "name": {
                                         "type": "string",
-                                        "format": "email",
-                                        "example": "user@example.com"
+                                        "example": "Administrador"
                                     },
                                     "sections": {
                                         "type": "array",
                                         "items": {
                                             "type": "string"
                                         },
-                                        "example": "[]"
+                                        "example": [
+                                            "Users",
+                                            "Products",
+                                            "Profiles"
+                                        ]
                                     }
                                 },
                                 "type": "object"
@@ -435,7 +528,12 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Perfil actualizado"
+                        "description": "Perfil actualizado",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
@@ -470,13 +568,48 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Perfil eliminado"
+                        "description": "Perfil eliminado",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
                     },
                     "404": {
                         "description": "Perfil no encontrado"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/profiles/export": {
+            "get": {
+                "tags": [
+                    "Profiles"
+                ],
+                "summary": "Exportar todos los perfiles",
+                "operationId": "31b31191b1fcda948aa85a1e2168f029",
+                "responses": {
+                    "200": {
+                        "description": "Respuesta con usuarios en un xlsx",
+                        "content": {
+                            "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet": {
+                                "schema": {
+                                    "type": "string",
+                                    "format": "binary"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "No autorizado"
                     }
                 },
                 "security": [
@@ -495,7 +628,12 @@
                 "operationId": "c457726701591d1183b53aa71fc13441",
                 "responses": {
                     "200": {
-                        "description": "Respuesta con usuarios"
+                        "description": "Respuesta con usuarios",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
@@ -548,11 +686,21 @@
                     }
                 },
                 "responses": {
-                    "201": {
-                        "description": "Usuario almacenado exitosamente"
+                    "200": {
+                        "description": "Usuario almacenado exitosamente",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
-                        "description": "No autorizado"
+                        "description": "No autorizado",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 },
                 "security": [
@@ -584,7 +732,12 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Usuario encontrado"
+                        "description": "Usuario encontrado",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
@@ -653,7 +806,12 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Usuario actualizado"
+                        "description": "Usuario actualizado",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
@@ -688,13 +846,48 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Usuario eliminado"
+                        "description": "Usuario eliminado",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "No autorizado"
                     },
                     "404": {
                         "description": "Usuario no encontrado"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/users/export": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Exportar todos los usuarios",
+                "operationId": "e42afb9269abfcc3af1306d459d31542",
+                "responses": {
+                    "200": {
+                        "description": "Respuesta con usuarios en un xlsx",
+                        "content": {
+                            "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet": {
+                                "schema": {
+                                    "type": "string",
+                                    "format": "binary"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "No autorizado"
                     }
                 },
                 "security": [
